--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,3 @@
 mybatis:
-  mapper-locations: classpath*:mappers/*.xml
-  type-aliases-package: com.naison.mybatistest.entity
+  mapper-locations: classpath:mapper/*.xml
+  type-handlers-package: com.naison.mybatistest.typehandler
